[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = "Algorithm practice application"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.45"
asyncpg = "^0.31.0"
alembic = "^1.17.2"
greenlet = "^3.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [".venv", "__pycache__", "alembic"]

[tool.ruff.lint]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["app"]
exclude = ["test", ".venv", "__pycache__"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
